# Trim

./: AUTHORS.md  BUGS.md  CMakeLists.txt  COPYING.md  ChangeLog.md  README.md  THANKS.md  TODO.md  build.sh  trim.c  trim.s
